2015-11-30 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable.py
	* scripts/UpperLimitTableTex.py
	* Don't use a weird list but use a dictionary as intermediate holder of
	results
	* Write out significance of p-value as well
	* Automatically cap nan p-values to 0.5 if nObs < nExp

2015-11-25 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
	* small bug fix in scripts/UpperLimitTable

2015-11-24 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable: allow setting of output prefix, number of
	points and mu range by hand. Store plot scan in png, pdf and eps format.

2015-10-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Supress several memory leaks in the collection of list files
	* LimitResult now uses std::string

2015-10-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Setup script fixes for zsh

2015-10-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
	* small hack in prepareHistos.py to allow for backup cache files on eos
	M python/prepareHistos.py

2015-10-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/GenerateTreeDescriptionFromJSON.py now stores fID as string and writes appropriate header 

2015-09-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Sharing of functionality between setup.sh and setup_afs.sh
	* Setup.sh now contains a 'VERSION' that gets exported to
	'HISTFITTER-VERSION'. Use this in case of a tag (e.g. "00-00-51")
	* svn:ignore on *.pyc in scripts

2015-09-18 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Make sure that setup_afs actually picks up python
	* Better debugging in prepareHistos()

2015-09-10 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
	* adding possibility to display impact of systematics before fit - code proposals by Luigi
	M       scripts/HistFitter.py
	M       src/Utils.cxx
	M       src/Utils.h

2015-09-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Patch to TMsgLogger.cxx to work on OS X
	* Patch to Makefile.arch to detect ROOT versions